# ruscm

./: Cargo.toml  notes.md  readme.md
.cargo/: config
src/: completer.rs  internals.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  parser.rs  repl.rs
stdlib/: forms.ss  prologue.ss
