[package]
name = "ruscm"
version = "0.1.0"
authors = ["lythesia <iranaikimi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.15.0"
strum_macros = "0.15.0"
dirs = "2.0.1"
memchr = "2.2.1"
rustyline = "5.0.2"
rustyline-derive = "0.1.0"
